[gd_scene load_steps=22 format=2]

[ext_resource path="res://others/fonts/A Dripping Marker.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://others/optionsmenu/textures/touch_controls.png" type="Texture" id=2]
[ext_resource path="res://others/pausemenu/PauseMenuOptions.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=20]
size = 50
outline_size = 4
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 4
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.905882, 0.905882, 0.905882, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0.576471, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.419608, 0.603922, 0.352941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.419608, 0.603922, 0.352941, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.419608, 0.603922, 0.352941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color( 1, 1, 1, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=13]
size = 24
outline_size = 1
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=14]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="PauseMenuOptions" type="CanvasLayer"]
layer = 5
script = ExtResource( 3 )

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.68176
margin_right = -1.68176
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Overlay/HBoxContainer"]
margin_right = 424.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="Background" type="Label" parent="Overlay/HBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )
custom_styles/normal = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/HBoxContainer/Control/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Label" parent="Overlay/HBoxContainer/Control/Background/VBoxContainer"]
margin_right = 300.0
margin_bottom = 150.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
text = "Graphics"
align = 1
valign = 1
autowrap = true

[node name="LowQuality" type="CheckBox" parent="Overlay/HBoxContainer/Control/Background/VBoxContainer"]
margin_top = 154.0
margin_right = 300.0
margin_bottom = 225.0
custom_styles/hover = SubResource( 21 )
custom_styles/hover_pressed = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "low"
align = 1

[node name="HighQuality" type="CheckBox" parent="Overlay/HBoxContainer/Control/Background/VBoxContainer"]
margin_top = 229.0
margin_right = 300.0
margin_bottom = 300.0
custom_styles/hover = SubResource( 21 )
custom_styles/hover_pressed = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "high"
align = 1

[node name="Control2" type="Control" parent="Overlay/HBoxContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Overlay/HBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -220.0
margin_right = 190.0
margin_bottom = 220.0
rect_min_size = Vector2( 190, 220 )
rect_pivot_offset = Vector2( 95, 110 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/HBoxContainer/Control2/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXButton" type="CheckButton" parent="Overlay/HBoxContainer/Control2/Label/VBoxContainer"]
margin_right = 380.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/hover_pressed = SubResource( 3 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 4 )
text = "sfx"
align = 1

[node name="MusicButton" type="CheckButton" parent="Overlay/HBoxContainer/Control2/Label/VBoxContainer"]
margin_top = 111.0
margin_right = 380.0
margin_bottom = 217.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/hover_pressed = SubResource( 3 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 4 )
text = "music"
align = 1

[node name="HelpButton" type="Button" parent="Overlay/HBoxContainer/Control2/Label/VBoxContainer"]
margin_top = 223.0
margin_right = 380.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "help"

[node name="DoneButton" type="Button" parent="Overlay/HBoxContainer/Control2/Label/VBoxContainer"]
margin_top = 334.0
margin_right = 380.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 4 )
text = "done"

[node name="Control3" type="Control" parent="Overlay/HBoxContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="HelpMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HelpMenu"]
margin_right = 55.0
margin_bottom = 36.0
rect_min_size = Vector2( 55, 0 )
custom_constants/margin_top = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HelpMenu/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 55.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 30 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HelpMenu"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -140.5
margin_right = 250.0
margin_bottom = 140.5
rect_min_size = Vector2( 500, 281 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/entry = SubResource( 14 )
anims/exit = SubResource( 15 )

[connection signal="pressed" from="Overlay/HBoxContainer/Control/Background/VBoxContainer/LowQuality" to="." method="_on_LowQuality_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/Control/Background/VBoxContainer/HighQuality" to="." method="_on_HighQuality_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/Control2/Label/VBoxContainer/SFXButton" to="." method="_on_SFXButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/Control2/Label/VBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/Control2/Label/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Overlay/HBoxContainer/Control2/Label/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="HelpMenu/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
